tests/programs/invalid/bad_import/main.py
#!/usr/bin/env python

import messages
